# freetime

./: .gitignore  README.md  compile.sh  elm.json  run.sh
freetime_app/: Cargo.toml
freetime_app/assets/: template.tpl
freetime_app/src/: #main.rs#  main.rs  middleware.rs
src/: Main.elm  Main.elm~
